[project]
name = "build-from-scratch-self-supervised-depth-estimation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "loguru>=0.7.3",
    "opencv-python>=4.12.0.88",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]
